--- a/views/error.pug
+++ b/views/error.pug
@@ -1,3 +1,4 @@
+include mixin/header
 doctype html
 head
   meta(charset='UTF-8')
@@ -5,7 +6,9 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   link(rel='stylesheet' href='/css/style.css')
   title Free games for all of us
-header.header
-  img.logo(src='/img/logo.png' alt='LOGO')
-  h1.heading-1.text-orange #{error.status}
-  h1.heading-1.text-white #{error.message}
++header("error")
+
+
+
+
+  
