--- a/views/home.pug
+++ b/views/home.pug
@@ -1,3 +1,6 @@
+include mixin/card
+include mixin/header
+
 doctype html
 head
   meta(charset='UTF-8')
@@ -6,12 +9,7 @@ head
   link(rel='stylesheet' href='css/style.css')
   script(defer='' src='script/index.js')
   title Free games for all of us
-header.header
-  img.logo(src='img/logo.png' alt='LOGO')
-  h1.heading-1.text-white pay less play more
-  h2.heading-2.text-white
-    span.game-number #{data.length} free games waiting for you
-  a.btn.text-white.btn-orange(href='#games') discover free games
++header("header")
 main
   h3.heading-3.text-center.text-white sort by
   .sort
@@ -56,27 +54,9 @@ main
       a(class=".category" href="/?category=low-spec") low-spec
       a(class=".category" href="/?category=tower-defense") tower-defense
       a(class=".category" href="/?category=horror") horror
-  #games.cards
-.popup
-  p.popup__close X
-
 div.cards
   each val in data
-    div.card
-      div.card__front
-        div.card__img
-          - const img = val.thumbnail;
-          img(src=img)
-        div.card__info
-          h5.heading-5.text-white Platform = #{val.platform}
-          h5.heading-5.text-white Publisher = #{val.publisher}
-          h5.heading-5.text-white Developer = #{val.developer}
-          h5.heading-5.text-white Release Date = #{val.release_date}
-      div.card__back
-        h5.heading-5.text-white #{val.short_description}
-        h5.heading-5.text-white #{val.genre}
-        - const url = `/games/${val.id}`;
-        a(class="btn btn-white text-orange" href=url) Learn More
+    +card(val)
         
 
     
