--- a/views/mixin/card.pug
+++ b/views/mixin/card.pug
@@ -1,17 +1,17 @@
-mixin card(val)
+mixin card(data)
     div.card
       div.card__front
         div.card__img
-          - const img = val.thumbnail;
+          - const img = data.thumbnail;
           img(src=img)
         div.card__info
-          h5.heading-5.text-white Name: #{val.title}
-          h5.heading-5.text-white Platform: #{val.platform}
-          h5.heading-5.text-white Publisher: #{val.publisher}
-          h5.heading-5.text-white Developer: #{val.developer}
-          h5.heading-5.text-white Release Date: #{val.release_date}
+          h5.heading-5.text-white.fw-100 Name: #{data.title}
+          h5.heading-5.text-white.fw-100 Platform: #{data.platform}
+          h5.heading-5.text-white.fw-100 Publisher: #{data.publisher}
+          h5.heading-5.text-white.fw-100 Developer: #{data.developer}
+          h5.heading-5.text-white.fw-100 Release Date: #{data.release_date}
       div.card__back
-        h5.heading-5.text-white #{val.short_description}
-        h5.heading-5.text-white #{val.genre}
-        - const url = `/games/${val.id}`;
+        h5.heading-5.text-white.fw-100 #{data.short_description}
+        h5.heading-5.text-white.fw-100 #{data.genre}
+        - const url = `/games/${data.id}`;
         a(class="btn btn-white text-orange" href=url) Learn More
