--- a/views/mixin/header.pug
+++ b/views/mixin/header.pug
@@ -1,16 +1,19 @@
 mixin header(type)
     if type =="error"
         header.header
-            img.logo(src='/img/logo.png' alt='LOGO')
+            a(href="/")
+                img.header__logo(src='/img/logo.png' alt='LOGO')
             h1.heading-1.text-orange #{error.status}
-            h1.heading-1.text-white.text-center #{error.message}
+            h1.heading-2.fw-100.text-white.text-center #{error.message}
 
     else if type == "header"
         header.header
-            img.logo(src='img/logo.png' alt='LOGO')
-            h1.heading-1.text-white pay less play more
-            h2.heading-2.text-white
-                span.game-number #{data.length} free games waiting for you
-            a.btn.text-white.btn-orange(href='#games') discover free games
+            a(href="/")
+                img.header__logo(src='/img/logo.png' alt='LOGO')
+            .header__container 
+                h1.heading-1.text-white.fw-100 pay less play more
+                h2.heading-2.text-white #{data.length} free games waiting for you
+                button.btn.btn-orange
+                    a(href='#games' class="text-white") discover free games
 
 
