--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,8 @@
 
 html {
   font-size: 62.5%;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  scroll-behavior: smooth; }
   @media only screen and (max-width: 48em) {
     html {
       font-size: 50%; } }
@@ -81,7 +82,7 @@ body {
   width: 100%;
   height: 100%;
   backdrop-filter: blur(2rem);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
   top: 0;
   left: 0;
   z-index: 1;
@@ -125,6 +126,9 @@ body {
   transition: transform 0.5s;
   box-shadow: 0 4rem 8rem black; }
 
+.btn-small {
+  padding: 1rem 2rem; }
+
 .btn::after {
   content: "";
   width: 100%;
@@ -151,6 +155,9 @@ body {
 
 .btn-white {
   background-color: #fff; }
+
+.btn-google {
+  background-color: #ea4335; }
 
 .cards {
   display: grid;
@@ -231,6 +238,14 @@ body {
   background-color: #252525;
   padding: 5rem; }
 
+.sort {
+  display: flex;
+  gap: 3rem;
+  margin-bottom: 5rem;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center; }
+
 .container {
   position: relative; }
   .container__img {
@@ -247,3 +262,30 @@ body {
     position: absolute;
     top: 50%;
     left: 2rem; }
+
+.login-container {
+  width: 50rem;
+  height: 50rem;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 3rem; }
+  .login-container__input {
+    background-color: none;
+    border: 1px solid #e2e8f0;
+    width: 100%;
+    padding: 1.5rem 3rem;
+    border-radius: 5px;
+    font-family: "Montserrat", sans-serif; }
+  .login-container button {
+    align-self: flex-end; }
+
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor; }
