--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,6 +14,7 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 
   @include respond(tab-port) {
     font-size: 50%;
@@ -31,7 +32,7 @@ body {
   width: 100%;
   height: 100%;
   backdrop-filter: blur(2rem);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
   top: 0;
   left: 0;
   z-index: 1;
