--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
+@import "abstracts/variables";
 @import "abstracts/mixin";
 
 @import "base/animations";
@@ -11,3 +12,4 @@
 
 @import "pages/home";
 @import "pages/game";
+@import "pages/login";
