--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,6 +210,17 @@ body {
     .card__back:not(a) {
       padding: 3rem; }
 
+.input-group {
+  align-items: center; }
+  .input-group--input {
+    padding: 1rem 2rem;
+    width: 100%;
+    border: 1px solid #e2e8f0;
+    border-radius: 5px; }
+  .input-group--label {
+    font-size: 2rem;
+    font-family: "Montserrat", sans-serif; }
+
 .header {
   background-image: url("../img/bg.jpg");
   background-position: center;
@@ -253,29 +264,26 @@ body {
     text-transform: capitalize;
     padding: 1rem 2rem; }
 
-.login-container {
-  width: 50rem;
-  height: 50rem;
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 3rem; }
-  .login-container__input {
-    background-color: none;
-    border: 1px solid #e2e8f0;
+.login-main {
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 50vw 50vw; }
+  @media only screen and (max-width: 48em) {
+    .login-main {
+      grid-template-columns: 1fr;
+      grid-template-rows: 40vh 60vh; } }
+  .login-main__background {
     width: 100%;
-    padding: 1.5rem 3rem;
-    border-radius: 5px;
-    font-family: "Montserrat", sans-serif; }
-  .login-container button {
-    align-self: flex-end; }
-
-.icon {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor; }
+    height: 100%;
+    background-image: url("../img/bg.jpg");
+    background-position: center;
+    background-size: cover; }
+  .login-main__form {
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center; }
+    .login-main__form button {
+      align-self: flex-end; }
