--- a/sass/pages/login.scss
+++ b/sass/pages/login.scss
@@ -1,34 +1,31 @@
-.login-container {
-  width: 50rem;
-  height: 50rem;
+.login-main {
+  height: 100vh;
+  width: 100%;
 
-  background-color: #fff;
+  display: grid;
+  grid-template-columns: 50vw 50vw;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 3rem;
+  @include respond(tab-port) {
+    grid-template-columns: 1fr;
+    grid-template-rows: 40vh 60vh;
+  }
 
-  &__input {
-    background-color: none;
-    border: 1px solid #e2e8f0;
+  &__background {
     width: 100%;
-    padding: 1.5rem 3rem;
-    border-radius: 5px;
-    font-family: $ff-montserrat;
+    height: 100%;
+    background-image: url("../img/bg.jpg");
+    background-position: center;
+    background-size: cover;
   }
+  &__form {
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    justify-content: center;
 
-  button {
-    align-self: flex-end;
+    button {
+      align-self: flex-end;
+    }
   }
-}
-
-.icon {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor;
 }
